# ntfif

./: CMakeLists.txt  README.md
example/: example.ntfif  main.cpp
include/N1ghtTheF0x/: ImageFormat.hpp
include/N1ghtTheF0x/ImageFormat/: File.hpp  Header.hpp  Pixel.hpp  Utils.hpp
source/: file.cpp  header.cpp  pixel.cpp  utils.cpp
